Code augmentation as we move to upstream model

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -12,12 +12,38 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9980
 management.port=9980
+# Kafka Configuration - use comma if multiple kafka servers are needed
 idaas.kafkaBrokers=localhost:9092
+# Basics on properties
+idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
+idaas.adtACKResponse=true
+idaas.adtTopicName=mctn_mms_adt
+idaas.hl7ORM_Directory=data/orm
 idaas.ormPort=10002
+idaas.ormACKResponse=true
+idaas.ormTopicName=mctn_mms_orm
+idaas.hl7ORU_Directory=data/oru
 idaas.oruPort=10003
+idaas.oruACKResponse=true
+idaas.oruTopicName=mctn_mms_oru
+idaas.hl7RDE_Directory=data/rde
 idaas.rdePort=10004
+idaas.rdeACKResponse=true
+idaas.rdeTopicName=mctn_mms_rde
+idaas.hl7MFN_Directory=data/mfn
 idaas.mfnPort=10005
+idaas.mfnACKResponse=true
+idaas.mfnTopicName=mctn_mms_mfn
+idaas.hl7MDM_Directory=data/mdm
 idaas.mdmPort=10006
+idaas.mdmACKResponse=true
+idaas.mdmTopicName=mctn_mms_mdm
+idaas.hl7SCH_Directory=data/sch
 idaas.schPort=10007
+idaas.schACKResponse=true
+idaas.schTopicName=mctn_mms_sch
+idaas.hl7VXU_Directory=data/vxu
 idaas.vxuPort=10008
+idaas.vxuACKResponse=true
+idaas.vxuTopicName=mctn_mms_vxu
