--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -4,7 +4,7 @@
     <!--Internal Project Details-->
     <groupId>io.connectedhealth_idaas.hl7</groupId>
     <artifactId>io.connectedhealth_idaas.hl7</artifactId>
-    <version>2021.04</version>
+    <version>4.01</version>
 
     <properties>
         <camel.version>3.9.0</camel.version>
@@ -33,12 +33,18 @@
     </dependencyManagement>
 
     <dependencies>
-           <!-- Camel -->
-            <dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-core</artifactId>
-            </dependency>
-            <!-- Spring Boot -->
+       <!-- Camel -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+    <!--        <version>${camel.version}</version>-->
+        </dependency>
+       <!-- <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-component-starter</artifactId>
+            <version>2.25.3</version>
+        </dependency>-->
+        <!-- Spring Boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-autoconfigure</artifactId>
@@ -61,23 +67,19 @@
             </dependency>
             <!-- Apache Camel Components -->
             <!-- HL7 -->
-            <dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-netty</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-servlet</artifactId>
-            </dependency>
            <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-hl7</artifactId>
             </dependency>
-            <!--<dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-hl7-starter</artifactId>
-                <version>2.25.3</version>
-            </dependency>-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-mllp</artifactId>
+        </dependency>
+            <!-- Servlet -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-servlet</artifactId>
+        </dependency>
             <!--Kafka -->
             <dependency>
                 <groupId>org.apache.camel</groupId>
