--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+# Admin Interface Settings
+management.endpoints.web.exposure.include=hawtio, jolokia
+hawtio.authenticationEnabled=false
+management.endpoint.hawtio.enabled=true
+management.endpoint.jolokia.enabled=true
+# urls
+# http://localhost:9981/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
+# http://localhost:9981/actuator/hawtio/index.html
+# Used for internal HTTP server managing application
+# Must be unique and defined otherwise defaults to 8080
+# used for any Fuse SpringBoot developed assets
+server.port=9981
 # Kafka
 idaas.kafkaBrokers=localhost:9092
-#idaas.kafkaBrokers=test-kakfa-idaas-odh-poc.apps.cluster-c4cf.c4cf.example.opentlc.com:9092
-#idaas.kafkaBrokers=odh-message-bus-kafka-bootstrap-idaas-odh-poc.apps.cluster-c4cf.c4cf.example.opentlc.com:9092
-
-#server.port=
+# FHIR Specific
 idaas.processToFHIR=true
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=hapi
