Updates to support metrics and additional enhancements and defect resolution

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -1,7 +1,25 @@
-# Server - Internal
-server.host=9983
+# Admin Interface Settings
+management.endpoints.web.exposure.include=hawtio, jolokia
+hawtio.authenticationEnabled=false
+management.endpoint.hawtio.enabled=true
+management.endpoint.jolokia.enabled=true
+# urls
+# http://localhost:9983/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
+# http://localhost:9983/actuator/hawtio/index.html
+# Used for internal HTTP server managing application
+# Must be unique and defined otherwise defaults to 8080
+# used for any Fuse SpringBoot developed assets
+server.port=9983
 # Kafka
 kafkaBrokers=localhost:9092
+# JDBC Database
+#spring.datasource.url=jdbc:mysql://localhost/idaas
+spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
+#jdbc:postgresql://localhost:5432/idaas
+spring.datasource.username=idaas
+spring.datasource.password=@idaas123
+#spring.database.driver-class-name=com.mysql.cj.jdbc.Driver
+#org.postgresql.Driver
 # Reporting Directory and File Name
 #mandatory.reporting.directory=/MandatoryReporting
 mandatory.reporting.directory=src/data/MandatoryReporting
@@ -12,10 +30,4 @@ covid.reporting.extension=*.csv
 # Reseach Data Directory and File Ext
 research.data.directory=src/data/ResearchData
 research.reporting.extension=*.csv
-# JDBC Database
-spring.datasource.url=jdbc:mysql://localhost/idaas
-#jdbc:postgresql://localhost:5432/idaas
-spring.datasource.username=idaas
-spring.datasource.password=@idaas123
-#spring.database.driver-class-name=com.mysql.cj.jdbc.Driver
-#org.postgresql.Driver
+
