--- a/iDaaS-Connect-HL7/.gitignore
+++ b/iDaaS-Connect-HL7/.gitignore
@@ -299,3 +299,9 @@ typings/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# dotenv environment variables file
+.env
+
+# IntelliJ idea directory exclusion
+/.idea/
