--- a/iDaaS-Connect-FHIR/pom.xml
+++ b/iDaaS-Connect-FHIR/pom.xml
@@ -54,6 +54,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -141,4 +147,3 @@
         </plugins>
     </build>
 </project>
-
