updated docker file

--- a/iDaaS-Connect-FHIR/Dockerfile
+++ b/iDaaS-Connect-FHIR/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8-jdk-alpine
 FROM maven:3.5.2-jdk-8-alpine
-USER root
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
 
 WORKDIR /app
 
