--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port=9981
 # Kafka
 idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
-idaas.processToFHIR=true
+idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=hapi
 idaas.ibmURI=localhost:8090/fhir-server/api/v4/
