added latest docker file configuration

--- a/iDaaS-Connect-FHIR/Dockerfile
+++ b/iDaaS-Connect-FHIR/Dockerfile
@@ -1,12 +1,12 @@
 FROM openjdk:8-jdk-alpine
 FROM maven:3.5.2-jdk-8-alpine
-USER ROOT
 
-WORKDIR /app
+USER root
+RUN mkdir -p /app
 
-COPY pom.xml ./app
+COPY pom.xml /app/
 
-COPY src ./app/src
+COPY src /app/
 
 RUN mvn clean install
 
