--- a/iDaaS-Connect-FHIR/Dockerfile
+++ b/iDaaS-Connect-FHIR/Dockerfile
@@ -1,15 +1,11 @@
 FROM openjdk:8-jdk-alpine
 FROM maven:3.5.2-jdk-8-alpine
 
-USER root
-RUN mkdir -p /app
-
-COPY pom.xml /app/
-
 COPY src /app/
 
-WORKDIR /app
+COPY pom.xml /tmp/pom.xml
+RUN mvn -B -f /tmp/pom.xml -s /usr/share/maven/ref/settings-docker.xml dependency:resolve
 
-RUN mvn -Duser.home=/var/maven "$@" && mvn clean install
+WORKDIR /app
 
 CMD ["mvn", "spring-boot:run"]
