--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -47,3 +47,6 @@ idaas.hl7VXU_Directory=data/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
+// CCDA
+idaas.hl7CCDA_Directory=data/ccda
+idaas.ccdaTopicName=mctn_mms_ccda
