--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoint.jolokia.enabled=true
 server.port=9980
 management.port=9980
 # Kafka Configuration - use comma if multiple kafka servers are needed
-idaas.kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=52.118.134.83:9094
 # Basics on properties
 idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
@@ -47,6 +47,5 @@ idaas.hl7VXU_Directory=data/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
-// CCDA
 idaas.hl7CCDA_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
