--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -11,11 +11,11 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9981
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=52.118.134.83:9094
 # FHIR Specific
-idaas.processToFHIR=false
+idaas.processToFHIR=true
 # fhirVendor can be ibm hapi or microsoft
-idaas.fhirVendor=hapi
-idaas.ibmURI=localhost:8090/fhir-server/api/v4/
+idaas.fhirVendor=ibm
+idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
 idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
