added the latest code

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -11,9 +11,9 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9981
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=52.118.134.74:9094
 # FHIR Specific
-idaas.processToFHIR=true
+idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=hapi
 idaas.ibmURI=localhost:8090/fhir-server/api/v4/
