--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -155,6 +155,12 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-management</artifactId>
         </dependency>
+        <!-- iDaaS Event Builder -->
+        <dependency>
+            <groupId>io.connectedhealth-idaas</groupId>
+            <artifactId>idaas-eventbuilder</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <profiles>
