--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # Admin Interface Settings
 management.endpoints.web.exposure.include=hawtio, jolokia
 hawtio.authenticationEnabled=false
@@ -13,9 +14,9 @@ server.port=9981
 # Kafka
 idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
-idaas.processToFHIR=true
+idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
-idaas.fhirVendor=hapi
-idaas.ibmURI=localhost:8090/fhir-server/api/v4/
+idaas.fhirVendor=ibm
+idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
 idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
