added updatedd properties

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -5,13 +5,13 @@ management.endpoint.hawtio.enabled=true
 management.endpoint.jolokia.enabled=true
 # urls
 # http://localhost:9981/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
-# http://localhost:9981/actuator/hawtio/index.html
+# 
 # Used for internal HTTP server managing application
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
 server.port=9981
 # Kafka
-idaas.kafkaBrokers=52.118.134.74:9094
+idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
 idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
