added wiretapping for terminology routing

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -19,3 +19,4 @@ idaas.fhirVendor=hapi
 idaas.ibmURI=localhost:8090/fhir-server/api/v4/
 idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
+idaas.processTerminologies=true
