changed bean invocation method params

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -12,7 +12,7 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9981
 # Kafka
-idaas.kafkaBrokers=52.118.134.83:9094
+idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
 idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
