--- a/iDaaS-Connect-FHIR/pom.xml
+++ b/iDaaS-Connect-FHIR/pom.xml
@@ -125,10 +125,15 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-management</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.connectedhealth-idaas</groupId>-->
+<!--            <artifactId>idaas-eventbuilder</artifactId>-->
+<!--            <version>2.2.1</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.2.0</version>
+            <version>2.2.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
