--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -156,10 +156,11 @@
             <artifactId>camel-management</artifactId>
         </dependency>
         <!-- iDaaS Event Builder -->
+        <!-- iDaaS Event Builder Local -->
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.1.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
