--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoint.jolokia.enabled=true
 server.port=9980
 management.port=9980
 # Kafka Configuration - use comma if multiple kafka servers are needed
-idaas.kafkaBrokers=52.118.134.83:9094
+idaas.kafkaBrokers=localhost:9092
 # Basics on properties
 idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
@@ -50,3 +50,4 @@ idaas.vxuTopicName=mctn_mms_vxu
 // CCDA
 idaas.hl7ccda_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
+idaas.processTerminologies=true
