--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -156,9 +156,9 @@
             <artifactId>camel-management</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.connectedhealth_idaas</groupId>
-            <artifactId>eventbuilder</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <groupId>io.connectedhealth-idaas</groupId>
+            <artifactId>idaas-eventbuilder</artifactId>
+            <version>2.2.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
