Enhancements - CCDA servlet endpoint, cleaned up code and also modified README.md

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -47,7 +47,8 @@ idaas.hl7VXU_Directory=data/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
-// CCDA
+# CCDA
 idaas.hl7ccda_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
+# Other Settings
 idaas.processTerminologies=true
