--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
     </dependencies>
 
