added config for ibm fhir server

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.port=9981
 # Kafka
 idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
-idaas.processToFHIR=false
+idaas.processToFHIR=true
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=ibm
 idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
