POM.xml updates and application.properties updates for HL7 additional properties

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -52,3 +52,5 @@ idaas.hl7ccda_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
 # Other Settings
 idaas.processTerminologies=true
+idaas.deidentify=false
+idaas.anonymize=false
