--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -155,12 +155,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-management</artifactId>
         </dependency>
-        <!-- iDaaS Event Builder -->
-        <!-- iDaaS Event Builder Local -->
+        <!-- iDaaS Event Builder Repo or Local-->
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.2.6-SNAPSHOT</version>
+            <version>2.2.6</version>
         </dependency>
     </dependencies>
 
@@ -177,8 +176,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
           <plugin>
