added for remote repository

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -10,11 +10,11 @@ management.endpoint.jolokia.enabled=true
 # Used for internal HTTP server managing application
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
-server.port=9981
+server.port=9982
 # Kafka
 idaas.kafkaBrokers=localhost:9092
 # FHIR Specific
-idaas.processToFHIR=true
+idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=ibm
 idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
