added docker file configuration changes

--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -193,8 +193,19 @@
           <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>io.connectedhealth_idaas.hl7.Application</mainClass>
+                </configuration>
               <version>${springboot.version}</version>
+              <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+           </executions>
             </plugin>
+            
         </plugins>
     </build>
 </project>
