--- a/iDaaS-Connect-HL7/Dockerfile
+++ b/iDaaS-Connect-HL7/Dockerfile
@@ -2,7 +2,7 @@
 FROM maven:3.6.0-jdk-11-slim AS build
 COPY pom.xml /app/
 COPY src /app/src
-RUN mvn -f /app/pom.xml clean install
+RUN mvn -f /app/pom.xml clean package
 
 # Run stage
 FROM openjdk:8-jdk-alpine
