--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -164,7 +164,7 @@
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.2.6</version>
+            <version>2.2.7-SNAPSHOT</version>
        </dependency>
         <dependency>
             <groupId>io.github.linuxforhealth</groupId>
