--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -13,7 +13,8 @@ management.endpoint.jolokia.enabled=true
 server.port=9980
 management.port=9980
 # Kafka Configuration - use comma if multiple kafka servers are needed
-idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+idaas.kafkaBrokers=localhost:9092
 # Basics on properties
 idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
