Updated code for additional bundles enhancements and also added a few more few resources specific to medicinal and so forth.

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -21,3 +21,4 @@ idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
 # FHIR Specific
 idaas.processToFHIR=true
 idaas.processTerminologies=true
+idaas.processBundles=false
