--- a/iDaaS-Connect-FHIR/Dockerfile
+++ b/iDaaS-Connect-FHIR/Dockerfile
@@ -1,15 +1,7 @@
-FROM maven:3.5.2-jdk-8-alpine AS MAVEN_BUILD
+# Build stage
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY target/io.connectedhealth_idaas.fhir-4.05.jar /app/target/
 
-COPY pom.xml /build/
-COPY src /build/src/
-
-WORKDIR /build/
-RUN mvn package
-
-FROM openjdk:8-jre-alpine
-
-WORKDIR /app
-
-COPY --from=MAVEN_BUILD /build/target/io.connectedhealth_idaas.fhir-4.05.jar /app/
-
-ENTRYPOINT ["java", "-jar", "io.connectedhealth_idaas.fhir-4.05.jar"]
+FROM openjdk:8-jdk-alpine
+COPY --from=build /app/target/io.connectedhealth_idaas.fhir-4.05.jar /app/app.jar
+ENTRYPOINT ["java","-jar","/app/app.jar"]
