--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -12,9 +12,11 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9982
 # Kafka
-idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+# idaas.kafkaBrokers=localhost:9092
+
 # FHIR Specific
-idaas.processToFHIR=true
+idaas.processToFHIR=false
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=ibm
 idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
