--- a/iDaaS-Connect-FHIR/pom.xml
+++ b/iDaaS-Connect-FHIR/pom.xml
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>io.connectedhealth-idaas</groupId>
             <artifactId>idaas-eventbuilder</artifactId>
-            <version>2.2.7-SNAPSHOT</version>
+            <version>2.3</version>
         </dependency>
     </dependencies>
 
