--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoint.jolokia.enabled=true
 server.port=9982
 # Kafka
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
-# idaas.kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=localhost:9092
 
 # FHIR Specific
 idaas.processToFHIR=false
