--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,13 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v2
       with:
-        token: ${{ secrets.IDAAS_ACCESS_TOKEN }}
+        token: ${{ secrets.HEROPHILUS_ACCESS_TOKEN }}
     - name: Java Maven release
       uses: qcastel/github-actions-maven-release@v1.12.16
       env:
         JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
       with:
-        access-token: ${{ secrets.IDAAS_ACCESS_TOKEN }}
+        access-token: ${{ secrets.HEROPHILUS_ACCESS_TOKEN }}
         release-branch-name: ${{ github.event.inputs.branch }}
         version-major: ${{ github.event.inputs.increment-major }}
         version-minor: ${{ github.event.inputs.increment-minor }}
