--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <!--<module>iDaaS-Connect-BlueButton</module>-->
     	<module>iDaaS-Connect-EDI</module>
     	<module>iDaaS-Connect-FHIR</module>
-    	<module>iDaaS-Connect-HL7</module>
+    	<!--<module>iDaaS-Connect-HL7</module>-->
     	<module>iDaaS-Connect-ThirdParty</module>
     </modules>
 
