Cleaning up files, and testing enhancement

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -12,15 +12,17 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9980
 management.port=9980
-# Kafka Configuration - use comma if multiple kafka servers are needed
-idaas.kafkaBrokers=localhost:9092
+# Message Configuration - use comma if multiple kafka servers are needed
+# kafka aws-kinesis aws-sqs
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
-
+idaas.kafkaBrokers=localhost:9092
+idaas.dataBrokerType=kafka
+idaas.dataBroker=localhost:9092
 # Basics on properties
 idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
 idaas.adtACKResponse=true
-idaas.adtTopicName=mctn_mms_adt
+idaas.adtTopicName=mctn_mms_adt2
 idaas.hl7ORM_Directory=data/orm
 idaas.ormPort=10002
 idaas.ormACKResponse=true
@@ -52,6 +54,7 @@ idaas.vxuTopicName=mctn_mms_vxu
 # CCDA
 idaas.hl7ccda_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
+idaas.ccdaConvert=true
 # FHIR bundle
 idaas.fhirBundleTopicName=mctn_mms_ccda
 # Other Settings
