--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -165,6 +165,12 @@
             <artifactId>idaas-eventbuilder</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <!--Linux for Health -->
+        <dependency>
+            <groupId>io.github.linuxforhealth</groupId>
+            <artifactId>hl7v2-fhir-converter</artifactId>
+            <version>1.0.14</version>
+        </dependency>
     </dependencies>
 
     <profiles>
