Updated iDaaS Connect HL7 based on new property testing.

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -10,7 +10,7 @@ management.endpoint.jolokia.enabled=true
 # Used for internal HTTP server managing application
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
-server.port=9982
+server.port=9981
 # Kafka
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 idaas.kafkaBrokers=localhost:9092
@@ -20,6 +20,6 @@ idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
 idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
 # FHIR Specific
-idaas.processToFHIR=true
-idaas.processTerminologies=true
+idaas.processToFHIR=false
+idaas.processTerminologies=false
 idaas.processBundles=false
