--- a/iDaaS-Connect-BlueButton/pom.xml
+++ b/iDaaS-Connect-BlueButton/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!--Internal Project Details-->
-    <groupId>io.connectedhealth_idaas.thirdparty</groupId>
-    <artifactId>io.connectedhealth_idaas.thridparty</artifactId>
-    <version>04.01</version>
+    <groupId>io.connectedhealth_idaas.bluebutton</groupId>
+    <artifactId>io.connectedhealth_idaas.bluebutton</artifactId>
+    <version>2022.02.07-SNAPSHOT</version>
 
     <properties>
-        <camel.version>3.9.0</camel.version>
+        <camel.version>3.14.0</camel.version>
         <springboot.version>2.4.4</springboot.version>
     </properties>
     <!-- https://camel.apache.org/releases/release-3.9.0/ -->
@@ -61,15 +61,9 @@
         </dependency>
         <!-- Apache Camel Components -->
         <!-- HTTP -->
-        <!-- depricated and will be removed in future -->
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-netty</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-netty4-starter</artifactId>
-            <version>2.25.3</version>
+            <artifactId>camel-http</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -85,16 +79,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-bean</artifactId>
         </dependency>
-        <!-- Http -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-http</artifactId>
-        </dependency>
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.12</version>
+            <version>1.7.35</version>
         </dependency>
         <!-- PDF -->
         <dependency>
@@ -122,7 +111,7 @@
         <dependency>
             <groupId>io.hawt</groupId>
             <artifactId>hawtio-springboot</artifactId>
-            <version>2.13.4</version>
+            <version>2.14.4</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.jolokia/jolokia-jvm -->
         <dependency>
