--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -4,12 +4,18 @@
     <!--Internal Project Details-->
     <groupId>io.connectedhealth_idaas.hl7</groupId>
     <artifactId>io.connectedhealth_idaas.hl7</artifactId>
-    <version>5.0.1</version>
+    <version>2022.02.07-SNAPSHOT</version>
 
     <properties>
-        <camel.version>3.9.0</camel.version>
+        <camel.version>3.14.0</camel.version>
         <springboot.version>2.4.4</springboot.version>
+       <!-- <java.version>11</java.version>-->
     </properties>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.4</version>
+    </parent>
     <!-- https://camel.apache.org/releases/release-3.9.0/ -->
     <dependencyManagement>
         <dependencies>
@@ -37,13 +43,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-    <!--        <version>${camel.version}</version>-->
-        </dependency>
-       <!-- <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-component-starter</artifactId>
-            <version>2.25.3</version>
-        </dependency>-->
+       </dependency>
         <!-- Spring Boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -139,14 +139,14 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.12</version>
+                <version>1.7.35</version>
             </dependency>
             <!--https://stackoverflow.com/questions/48722138/how-to-monitor-apache-camel-routes-in-a-java-project-using-hawtio-->
             <!-- UI -->
              <dependency>
                 <groupId>io.hawt</groupId>
                 <artifactId>hawtio-springboot</artifactId>
-                <version>2.13.4</version>
+                <version>2.14.4</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.jolokia/jolokia-jvm -->
             <dependency>
@@ -169,7 +169,7 @@
         <dependency>
             <groupId>io.github.linuxforhealth</groupId>
             <artifactId>hl7v2-fhir-converter</artifactId>
-            <version>1.0.14</version>
+            <version>1.0.15</version>
         </dependency>
     </dependencies>
 
@@ -184,10 +184,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+             <!--   <version>3.8.1</version>-->
                 <configuration>
-                    <source>11</source>
+                 <!--   <source>11</source>
                     <target>11</target>
+                    <release>11</release>-->
                 </configuration>
             </plugin>
           <plugin>
